--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,8 @@
     "@nestjs/throttler": "^5.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -48,6 +50,8 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^10.0.0",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -70,6 +74,12 @@
       "ts"
     ],
     "rootDir": "src",
+    "moduleNameMapper": {
+      "^@common/(.*)$": "<rootDir>/common/$1",
+      "^@database/(.*)$": "<rootDir>/database/$1",
+      "^@modules/(.*)$": "<rootDir>/modules/$1",
+      "^@lib/(.*)$": "<rootDir>/lib/$1"
+    },
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
