--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -33,7 +33,8 @@
       "@store/*": ["store/*"],
       "@interfaces/*": ["interfaces/*"],
       "@providers/*": ["providers/*"],
-      "@context/*": ["context/*"]
+      "@context/*": ["context/*"],
+      "@apis/*": ["apis/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
