--- a/server/package.json
+++ b/server/package.json
@@ -38,7 +38,9 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "multer": "^1.4.5-lts.1",
+    "@aws-sdk/client-s3": "^3.514.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -54,6 +56,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@types/multer": "^1.4.11",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
