--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -34,7 +34,8 @@
       "@interfaces/*": ["interfaces/*"],
       "@providers/*": ["providers/*"],
       "@context/*": ["context/*"],
-      "@apis/*": ["apis/*"]
+      "@apis/*": ["apis/*"],
+      "@services/*": ["services/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
