fix: 피드 리스트 불러오기 수정

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,8 +8,10 @@ services:
       - "3000:3000"
     volumes:
       - "../client:/app/client"
+    env_file:
+      - ../client/.env
     environment:
-      - DEV_ENV=docker
+      - DOCKER_RUN=docker
       - NODE_ENV=development
 
   server:
