--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-cookie": "^7.1.4",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "react-spinners": "^0.14.1",
