--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "docker:local": "cd docker && docker compose up"
+    "docker:local": "cd docker && docker compose up",
+    "dev": "concurrently \"cd client && npm run dev\" \"cd server && npm run start:dev\""
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/funfun-taste/gofoodie.git"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "concurrently": "^9.0.0"
+  }
 }
